Fixed index shifted

--- a/frontend/src/styles/uploadfile-button.css
+++ b/frontend/src/styles/uploadfile-button.css
@@ -1,6 +1,7 @@
 .upload-file-button {
   display: flex;
   align-items: center;
+  position: relative; /* Add relative positioning */
 }
 
 .upload-text {
@@ -22,6 +23,7 @@
   border-radius: 24px;
   cursor: pointer;
   transition: border-color 0.3s;
+
 }
 
 .uploadfile-button input[type="file"] {
@@ -34,8 +36,8 @@
 }
 
 .delete-icon {
-  padding: 1px;
-  margin-left: 16px;
+  position: absolute; /* Position the delete icon absolutely */
+  right: -40px; /* Adjust the position as needed */
   cursor: pointer;
   color: red;
   font-size: 28px; /* icon size */
